pre-run
